Fix for card overflow

--- a/public/application.css
+++ b/public/application.css
@@ -31,7 +31,7 @@ hr {
 }
 
 .card_image {
-  margin: 0 -2.5em .4em .6em;
+  margin: 0 -2em .4em .6em;
 }
 
 .total {
